# isync

./: .gitignore  AUTHORS  Makefile.am  NEWS  TODO  configure.ac  mbsync-get-cert  version.sh
LICENSES/: LicenseRef-isync-GPL-exception.txt
debian/: changelog  copyright
src/: .gitignore  Makefile.am  bit_enum_gen.pl  common.h  config.c  config.h  driver.c  driver.h  drv_imap.c  drv_maildir.c  drv_proxy.c  drv_proxy_gen.pl  imap_msgs.c  imap_p.h  imap_utf7.c  maildir.c  main.c  main_list.c  main_p.h  main_sync.c  mbsync.1  mbsync.1.in  mbsyncrc.sample  mdconvert.1  mdconvert.1.in  mdconvert.c  run-tests.pl  socket.c  socket.h  sync.c  sync.h  sync_msg_cvt.c  sync_p.h  sync_state.c  tst_imap_msgs.c  tst_imap_utf7.c  tst_msg_cvt.c  tst_timers.c  util.c
